# src/main/java/br/com/powercards/dto/WorkspaceRequest.java
@@ -1,0 +1,4 @@
+package br.com.powercards.dto;
+
+public record WorkspaceRequest(String name) {
+}
