# src/main/java/br/com/powercards/dto/WorkspaceResponse.java
@@ -1,0 +1,4 @@
+package br.com.powercards.dto;
+
+public record WorkspaceResponse(String id, String name) {
+}
